Fixed email trigger

--- a/templates/emails/onboarding_bounce.html
+++ b/templates/emails/onboarding_bounce.html
@@ -39,7 +39,7 @@
                 <!-- Screenshot -->
                 <div style="margin:28px 0 20px 0;text-align:center;">
                   <img
-                    src="https://hirednowai.com/static/images/screenshot_free5.png"
+                    src="https://hired-now-ai.s3.us-east-1.amazonaws.com/public_images/screenshot_free5.png"
                     alt="Free 5 applications option"
                     style="max-width:100%;
                            border-radius:12px;
