Added google analystics

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y1Y1XHD63P"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Y1Y1XHD63P');
+</script>
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{{ title or "HiredNow AI" }}</title>
@@ -29,6 +40,8 @@
   })
 
 </script>
+
+
 </head>
 
 <body class="bg-gray-50 text-gray-900 min-h-screen flex flex-col">
